{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 311,
  "lineage": "3efed429-0c9e-813c-c262-aaecb3bf897e",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:loadbalancer/app/main-alb/481e65fed27c8399",
            "arn_suffix": "app/main-alb/481e65fed27c8399",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-alb-1151158648.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:loadbalancer/app/main-alb/481e65fed27c8399",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-00100ef178c9dd93b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b7cf9d6fb3146474"
              },
              {
                "subnet_id": "subnet-0e1fbc08c3e93f8e0"
              }
            ],
            "subnets": [
              "subnet-0b7cf9d6fb3146474",
              "subnet-0e1fbc08c3e93f8e0"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "vpc_id": "vpc-002dc3e2e0981135e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:loadbalancer/app/main-alb/481e65fed27c8399"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:listener/app/main-alb/481e65fed27c8399/f1085566c1cb0c13",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:targetgroup/main-tg/24b3a3c070fada84",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:listener/app/main-alb/481e65fed27c8399/f1085566c1cb0c13",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:loadbalancer/app/main-alb/481e65fed27c8399",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:listener/app/main-alb/481e65fed27c8399/f1085566c1cb0c13"
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:targetgroup/main-tg/24b3a3c070fada84",
            "arn_suffix": "targetgroup/main-tg/24b3a3c070fada84",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:targetgroup/main-tg/24b3a3c070fada84",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "main-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:006506275991:targetgroup/main-tg/24b3a3c070fada84"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:security-group/sg-00100ef178c9dd93b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00100ef178c9dd93b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "006506275991",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "sg-00100ef178c9dd93b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:security-group/sg-0923ff530a67d3d14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0923ff530a67d3d14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs-sg",
            "name_prefix": "",
            "owner_id": "006506275991",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "terraform-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "sg-0923ff530a67d3d14",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0862f4cda4a23a950",
            "arn": "arn:aws:ec2:ap-south-1:006506275991:elastic-ip/eipalloc-0862f4cda4a23a950",
            "domain": "vpc",
            "id": "eipalloc-0862f4cda4a23a950",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-250-194.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.250.194",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "nat-eip",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nat-eip",
              "Project": "terraform-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:internet-gateway/igw-08529b5f7e77105eb",
            "id": "igw-08529b5f7e77105eb",
            "owner_id": "006506275991",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "main-igw",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-igw",
              "Project": "terraform-app"
            },
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0862f4cda4a23a950",
            "association_id": "eipassoc-03b92384e1c7f6341",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0468eb4b84b181a31",
            "network_interface_id": "eni-083769242ce18884f",
            "private_ip": "10.0.0.239",
            "public_ip": "15.207.250.194",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b7cf9d6fb3146474",
            "tags": {
              "Environment": "dev",
              "Name": "main-nat",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-nat",
              "Project": "terraform-app"
            },
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08529b5f7e77105eb",
            "id": "r-rtb-01655d8e330bad7391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-01655d8e330bad739",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-01655d8e330bad739"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c7e76f3bfd40f4811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0468eb4b84b181a31",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c7e76f3bfd40f481",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0c7e76f3bfd40f481"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:route-table/rtb-0c7e76f3bfd40f481",
            "id": "rtb-0c7e76f3bfd40f481",
            "owner_id": "006506275991",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "private-rt",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-rt",
              "Project": "terraform-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "rtb-0c7e76f3bfd40f481",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:route-table/rtb-01655d8e330bad739",
            "id": "rtb-01655d8e330bad739",
            "owner_id": "006506275991",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "public-rt",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-rt",
              "Project": "terraform-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "rtb-01655d8e330bad739",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd78b60c03df219e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c7e76f3bfd40f481",
            "subnet_id": "subnet-0c2c29e1187002b8d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "rtbassoc-0dd78b60c03df219e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c0bf10e488bdaf3",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c7e76f3bfd40f481",
            "subnet_id": "subnet-07b6942833dc30b92"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "rtbassoc-09c0bf10e488bdaf3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e4107d838d3db77",
            "region": "ap-south-1",
            "route_table_id": "rtb-01655d8e330bad739",
            "subnet_id": "subnet-0b7cf9d6fb3146474"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "rtbassoc-05e4107d838d3db77",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0984b93a290308bf0",
            "region": "ap-south-1",
            "route_table_id": "rtb-01655d8e330bad739",
            "subnet_id": "subnet-0e1fbc08c3e93f8e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "rtbassoc-0984b93a290308bf0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:subnet/subnet-0c2c29e1187002b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2c29e1187002b8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006506275991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-1",
              "Project": "terraform-app",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-1",
              "Project": "terraform-app",
              "Type": "private"
            },
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "subnet-0c2c29e1187002b8d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:subnet/subnet-07b6942833dc30b92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b6942833dc30b92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "006506275991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-2",
              "Project": "terraform-app",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-2",
              "Project": "terraform-app",
              "Type": "private"
            },
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "subnet-07b6942833dc30b92",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:subnet/subnet-0b7cf9d6fb3146474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7cf9d6fb3146474",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "006506275991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-1",
              "Project": "terraform-app",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-1",
              "Project": "terraform-app",
              "Type": "public"
            },
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "subnet-0b7cf9d6fb3146474",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:subnet/subnet-0e1fbc08c3e93f8e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1fbc08c3e93f8e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "006506275991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-2",
              "Project": "terraform-app",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-2",
              "Project": "terraform-app",
              "Type": "public"
            },
            "vpc_id": "vpc-002dc3e2e0981135e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "subnet-0e1fbc08c3e93f8e0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:006506275991:vpc/vpc-002dc3e2e0981135e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c9d5fdf977dd952",
            "default_route_table_id": "rtb-0b16fbdface7c08c7",
            "default_security_group_id": "sg-0a1cd8dec46537933",
            "dhcp_options_id": "dopt-09a8c8b3bc03d8fbf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002dc3e2e0981135e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b16fbdface7c08c7",
            "owner_id": "006506275991",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "main-vpc",
              "Project": "terraform-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "main-vpc",
              "Project": "terraform-app"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "006506275991",
            "id": "vpc-002dc3e2e0981135e",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}